<resources>
    <string name="app_name">Chandrabhaga Collection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered here.</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>

    <string name="menu_purchase">Purchase</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_stock">Stock</string>
    <string name="menu_report">Reports</string>
    <string name="menu_logout">Logout</string>

    <string name="hint_brand_name">Brand</string>
    <string name="hint_catalog_name">Catalog</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_rate">Price</string>

    <string name="btn_add_product">ADD</string>
    <string name="dismiss">dismiss</string>

    <string name="server_error">Faild to fetch data, please try again.</string>
</resources>
