<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/purchase"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_purchase" />
        <item
            android:id="@+id/sale"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sale" />
        <item
            android:id="@+id/stock"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_stock" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />

        </menu>
    </item>

</menu>
